# Transazioni-Finanziarie

./: .gitignore  Bonifico.cpp  Bonifico.h  CMakeLists.txt  Conto.cpp  Conto.h  ContoCorrente.cpp  ContoCorrente.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  Deposito.cpp  Deposito.h  FileMgr.cpp  FileMgr.h  Investimento.cpp  Investimento.h  Menu.cpp  Prelievo.cpp  Prelievo.h  Transazione.cpp  Transazione.h  Utenza.cpp  Utenza.h  main.cpp
test/: CMakeLists.txt  UtenzaTest.cpp  contoFixture.cpp  contocorrenteFixture.cpp  dateTest.cpp  datetimeTest.cpp  investmentTest.cpp  runAllTests.cpp  transactionTest.cpp
